# federated-query

./: .flake8  .gitignore  .semgrep.yml  .semgrepignore  AGENTS.md  CLAUDE.md  Cargo.toml  FEDERATED_AGGREGATION_EXAMPLES.md  HANDOFF.md  Makefile  PHASE_3_COMPLETION.md  README-agents-onboarding.md  README-architecture.md  README-decorrelation-engine.md  README-test-harness-setup.md  README.md  TODO-next.md  TODO-phase7-review.md  accelerator-plan.md  acl-plan.md  adaptive-catalog-plan.md  clippy.toml  decorrelation-gaps.md  decorrelation-plan.md  decorrelation-tasks.md  dim-shipping-collapse-gate-plan.md  dim-shipping-open-problems.md  dim-shipping-plan.md  dim-shipping-ship-cap-plan.md  disjunctive-decorrelation-plan.md  docker-compose.yml  dynamic-catalog-plan.md  eager-agg-plan.md  event-analytics-design.md  event-analytics-prd.md  events-plan.md  fact-injection-plan.md  fix-silent-errors.md  fragment-fusion-plan.md  join-pushdown-plan.md  (+20 more)
.cargo/: config.toml
.claude/: settings.json
crates/fedq/: Cargo.toml  README.md
crates/fedq-py/: Cargo.toml
crates/fedq-py/src/: ffi.rs  lib.rs
crates/fedq-server/: Cargo.toml  README.md
crates/fedq-server/src/: auth.rs  encode.rs  handler.rs  lib.rs  main.rs  params.rs  scram.rs  session.rs
crates/fedq-server/tests/it/: main.rs  server.rs
crates/fedq/src/: main.rs  render.rs  repl.rs
crates/fedq/tests/it/: cli.rs  main.rs
crates/fq-accel/: Cargo.toml  README.md
crates/fq-accel/src/: accelerator.rs  catalog.rs  error.rs  lib.rs  merge.rs  source.rs  store.rs  view.rs  watermark.rs
crates/fq-accel/tests/it/: delta.rs  lifecycle.rs  main.rs
crates/fq-bind/: Cargo.toml
crates/fq-bind/src/: binder.rs  error.rs  expr.rs  lib.rs
crates/fq-bind/tests/: bind.rs
crates/fq-catalog/: Cargo.toml
crates/fq-catalog/src/: catalog.rs  datasource.rs  error.rs  lib.rs  schema.rs  stats_catalog.rs
crates/fq-catalog/tests/: catalog.rs  stats_catalog.rs
crates/fq-catalog/tests/it/: catalog.rs  main.rs  stats_catalog.rs
crates/fq-common/: Cargo.toml
crates/fq-common/src/: budget.rs  config.rs  error.rs  events.rs  lib.rs  logging.rs  types.rs  update.rs
crates/fq-common/tests/: config.rs
crates/fq-connectors/: Cargo.toml
crates/fq-connectors/src/: clickhouse_source.rs  duckdb_source.rs  lib.rs  mysql_source.rs  parquet_source.rs  postgres_source.rs
crates/fq-connectors/tests/: duckdb_source.rs  postgres_source.rs
crates/fq-connectors/tests/it/: clickhouse_source.rs  duckdb_source.rs  main.rs  mysql_source.rs  parquet_source.rs  postgres_source.rs
crates/fq-decorrelate/: Cargo.toml
crates/fq-decorrelate/src/: boolean.rs  dependent.rs  disjunctive.rs  error.rs  filter.rs  helpers.rs  lib.rs  prepare.rs  scope.rs  value.rs
crates/fq-decorrelate/tests/: dependent.rs  disjunctive.rs  flattenable.rs  scalar.rs  scope.rs  synthetic_types.rs
crates/fq-decorrelate/tests/common/: mod.rs
crates/fq-decorrelate/tests/it/: dependent.rs  disjunctive.rs  flattenable.rs  main.rs  scalar.rs  scope.rs  synthetic_types.rs
crates/fq-emit/: Cargo.toml
crates/fq-emit/src/: clauses.rs  dialect.rs  error.rs  expr.rs  ident.rs  lib.rs  resolver.rs
crates/fq-events/: Cargo.toml  README.md  build.rs
crates/fq-events/src/: build.rs  build_external.rs  chunks.rs  contract.rs  cursor.rs  dict.rs  error.rs  exec.rs  format.rs  funnel.rs  lib.rs  model.rs  paths.rs  paths_sa.rs  registry.rs  sais.rs  segment.rs  sidecar.rs  store.rs  stream.rs
crates/fq-events/tests/: engine.rs
crates/fq-exec/: Cargo.toml
crates/fq-exec/src/: bridge.rs  connectors.rs  engine.rs  error.rs  lib.rs
crates/fq-exec/src/core/: expr.rs  ir.rs  mod.rs  partition.rs  sql.rs  types.rs
crates/fq-exec/tests/: e2e_duckdb.rs
crates/fq-optimize/: Cargo.toml
crates/fq-optimize/src/: error.rs  estimate_defaults.rs  join_graph.rs  lib.rs  pushdown.rs  statistics.rs  subplan_signature.rs
crates/fq-optimize/src/cost/: aggregate.rs  join.rs  mod.rs  ordinal.rs  scan.rs  selectivity.rs
crates/fq-optimize/src/rules/: aggregate.rs  cte_union_filter.rs  driver.rs  eager_aggregation.rs  join_ordering.rs  limit.rs  mod.rs  order_by.rs  predicate.rs  projection.rs  semi_join.rs
crates/fq-optimize/src/rules/cte_union_filter/: tests.rs
crates/fq-optimize/src/rules/eager_aggregation/: tests.rs
crates/fq-optimize/src/rules/join_ordering/: tests.rs
crates/fq-optimize/tests/: end_to_end.rs  optimize.rs
crates/fq-optimize/tests/it/: main.rs  optimize.rs
crates/fq-parse/: Cargo.toml
crates/fq-parse/src/: convert.rs  error.rs  event_statement.rs  events.rs  expr.rs  functions.rs  lib.rs  select.rs  statement.rs  window.rs
crates/fq-parse/tests/: parse.rs
crates/fq-physical/: Cargo.toml
crates/fq-physical/src/: dim_shipping.rs  error.rs  lib.rs  relation_sql.rs  single_source.rs
crates/fq-physical/src/planner/: cte.rs  join.rs  lateral.rs  mod.rs  orient.rs  set_op.rs
crates/fq-physical/src/steps/: cse.rs  emit_nodes.rs  error.rs  expr_retag.rs  mod.rs  observe.rs  reduction.rs  render_sql.rs  scan_spec.rs  types.rs
crates/fq-physical/tests/: dim_shipping.rs  dim_shipping_kill_switch.rs  orient.rs  plan.rs  single_source.rs  steps.rs
crates/fq-physical/tests/it/: main.rs  plan.rs  single_source.rs  steps.rs
crates/fq-plan/: Cargo.toml
crates/fq-plan/src/: expr.rs  lib.rs  logical.rs  physical.rs
crates/fq-plan/tests/: expression_visitor.rs
crates/fq-runtime/: Cargo.toml
crates/fq-runtime/src/: acl.rs  delta.rs  dynamic_catalog.rs  error.rs  events.rs  explain.rs  introspect.rs  lib.rs  materialized.rs  settings.rs  substitute.rs
crates/fq-runtime/tests/: cross_source.rs  duckdb_runtime.rs
crates/fq-runtime/tests/it/: acl.rs  concurrency.rs  cross_source.rs  cross_source_clickhouse.rs  ctes.rs  delta_refresh.rs  duckdb_runtime.rs  dynamic_catalog.rs  event_dataset.rs  event_views.rs  main.rs  materialized_views.rs  parquet_runtime.rs  settings.rs  substitution.rs
crates/fq-scram/: Cargo.toml
crates/fq-scram/src/: error.rs  handshake.rs  lib.rs  verifier.rs
tools/fq-lint/: Cargo.toml
tools/fq-lint/src/: main.rs
(+768 files in other folders)
