[package]
name = "fq-connectors"
version = "0.1.0"
edition.workspace = true

# fq-connectors: the concrete data-source connectors. Implements the
# fq-catalog::DataSource trait (the catalog/statistics tier) against real drivers.
# Ports datasources/duckdb.py and datasources/postgresql.py. The DATA-PLANE fetch
# (Arrow streaming, ship, ctid-parallel) is a separate concern for fq-exec.

[dependencies]
fq-common = { path = "../fq-common" }
fq-catalog = { path = "../fq-catalog" }
# NEVER "bundled": DuckDB links as the official prebuilt library, fetched by
# scripts/setup-duckdb-lib.sh and wired via .cargo/config.toml (fq-lint enforces).
duckdb = { version = "1.3" }
# Sync Postgres client for the catalog/statistics tier (metadata, pg_stats,
# reltuples, EXPLAIN). No Arrow here - the data-plane fetch is fq-exec's concern.
postgres = { version = "0.19", features = ["with-serde_json-1"] }
serde_json = "1"

[lints]
workspace = true
