[package]
name = "fq-decorrelate"
version = "0.1.0"
edition.workspace = true

# fq-decorrelate: remove subquery EXPRESSIONS from a bound logical plan, turning
# them into set-based joins so NO correlated/bounded subquery survives into
# execution. Ports optimizer/decorrelation.py. Runs before the rule optimizer.

[dependencies]
fq-common = { path = "../fq-common" }
fq-plan = { path = "../fq-plan" }
thiserror = "2"

[dev-dependencies]
# Tests drive real SQL through parse + bind, then decorrelate.
fq-parse = { path = "../fq-parse" }
fq-bind = { path = "../fq-bind" }
fq-catalog = { path = "../fq-catalog" }

[lints]
workspace = true
