[package]
name = "fq-emit"
version = "0.1.0"
edition.workspace = true

# fq-emit: fq-plan expression/clause nodes -> canonical Postgres-form SQL text,
# plus the single transpile boundary (to_source_sql) that turns that canonical
# form into each source's own dialect via polyglot-sql. Ports plan/emit/
# {expressions,clauses,resolver}.py and the plan/physical.py to_source_sql
# boundary. polyglot is NOT the renderer of the canonical form (we build the text
# directly); it is used only to transpile the finished Postgres SQL per dialect,
# exactly as the Python engine used sqlglot's transpiler.

[dependencies]
fq-common = { path = "../fq-common" }
fq-plan = { path = "../fq-plan" }
polyglot-sql = "0.5.15"
thiserror = "2"

[lints]
workspace = true
