[package]
name = "fq-exec"
version = "0.1.0"
edition.workspace = true

# fq-exec: the federated execution engine. Imported from `fedqrs` (src/engine.rs
# + src/connectors.rs + the core crate) and de-pyo3-ified. The engine reads every
# source natively (ADBC Postgres, native DuckDB, DataFusion Parquet), runs the
# relational fragments on DataFusion, and returns the Arrow result. The pyo3 FFI
# boundary that used to wrap it moves to the later fedq-py crate.

[dependencies]
# The step bridge: fq-physical produces BuiltSteps holding fq_plan::Expr; this
# crate converts them into core::ir and runs the engine. fq-common carries the
# DataType enum used by the cast lowering.
fq-plan = { path = "../fq-plan" }
fq-common = { path = "../fq-common" }
fq-physical = { path = "../fq-physical" }
datafusion = "54"
# arrow/arrow-array/arrow-schema pinned to the workspace's existing 58.x line
# (Cargo.lock has arrow 58.3.0); DataFusion 54 pulls the same arrow 58.
arrow = "58"
arrow-array = "58"
arrow-schema = "58"
tokio = { version = "1", features = ["rt-multi-thread"] }
# ClickHouse reads go over its HTTP interface (FORMAT ArrowStream); ureq is the
# sync client, default-features off to drop TLS (plain HTTP to the endpoint).
ureq = { version = "3", default-features = false }
# MySQL reads go over the sync client; rows are decoded to Arrow here. minimal +
# no default features drops the TLS stack (plain TCP to the DB).
mysql = { version = "28", default-features = false, features = ["minimal"] }
# Stream combinators for pool-tracked batch accumulation.
futures = "0.3"
# The IR keeps its serde for this milestone so the imported ir.rs unit tests run;
# the JSON boundary moves to fedq-py.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ADBC reads Postgres straight into Arrow (the same C driver the Python path used).
adbc_core = "0.23"
adbc_driver_manager = "0.23"
# Native DuckDB source connector (reads .duckdb files and ingests temp tables via
# the Arrow appender).
# NEVER "bundled": DuckDB links as the official prebuilt library, fetched by
# scripts/setup-duckdb-lib.sh and wired via .cargo/config.toml (fq-lint enforces).
duckdb = { version = "1.3", features = ["appender-arrow"] }
thiserror = "2"

[dev-dependencies]
# The e2e proof drives the whole planning pipeline against a real DuckDB fixture
# before executing it here, so every upstream crate is a test dependency.
fq-catalog = { path = "../fq-catalog" }
fq-connectors = { path = "../fq-connectors" }
fq-parse = { path = "../fq-parse" }
fq-bind = { path = "../fq-bind" }
fq-decorrelate = { path = "../fq-decorrelate" }
fq-optimize = { path = "../fq-optimize" }

[lints]
workspace = true
