[package]
name = "fq-optimize"
version = "0.1.0"
edition.workspace = true

# fq-optimize: the logical optimizer. A fixpoint rule driver + every rewrite rule
# (pushdown, join ordering, eager aggregation, CTE union filter), the cost model,
# and the statistics collector. Ports optimizer/{rules,cost,statistics,join_ordering,
# join_graph,estimate_defaults,subplan_signature,pushdown,eager_aggregation,
# cte_union_filter,factory}.py. Runs after fq-decorrelate on a bound, decorrelated plan.

[dependencies]
fq-common = { path = "../fq-common" }
fq-plan = { path = "../fq-plan" }
fq-catalog = { path = "../fq-catalog" }
fq-connectors = { path = "../fq-connectors" }
# Renders the scan probe `scan_planner_estimate` sends to the source planner.
fq-emit = { path = "../fq-emit" }
# The fixpoint driver calls scope::validate_scope after every rule that changes
# the plan (the loud well-scoped-plan safety net), so it is a runtime dependency.
fq-decorrelate = { path = "../fq-decorrelate" }
thiserror = "2"
sha1 = "0.10"
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
# Tests drive real SQL through parse + bind + decorrelate, then optimize.
fq-parse = { path = "../fq-parse" }
fq-bind = { path = "../fq-bind" }

[lints]
workspace = true
