[package]
name = "fq-parse"
version = "0.1.0"
edition.workspace = true

# fq-parse: SQL text -> LogicalPlan. polyglot-sql is the parser; this crate walks
# its AST into the fq-plan logical model, expands stars, and rejects unsupported
# SQL loudly. Ports parser/parser.py, parser/dialect.py, processor/
# query_preprocessor.py.

[dependencies]
fq-common = { path = "../fq-common" }
fq-plan = { path = "../fq-plan" }
fq-catalog = { path = "../fq-catalog" }
polyglot-sql = "0.5.15"
thiserror = "2"

[lints]
workspace = true
