[package]
name = "fq-physical"
version = "0.1.0"
edition.workspace = true

# fq-physical: optimized LogicalPlan -> PhysicalPlan. Ports
# optimizer/physical_planner.py + single_source_pushdown.py + dim_shipping.py.
# The rust_ir.py step-building (PhysicalPlan -> executable steps) is DEFERRED to
# the fq-exec pairing (milestone C), since the Step type lives with the engine.
# fq-physical composes fq-emit for all remote-query SQL rendering.

[dependencies]
fq-common = { path = "../fq-common" }
fq-plan = { path = "../fq-plan" }
fq-catalog = { path = "../fq-catalog" }
fq-optimize = { path = "../fq-optimize" }
fq-emit = { path = "../fq-emit" }
thiserror = "2"

[dev-dependencies]
fq-parse = { path = "../fq-parse" }
fq-bind = { path = "../fq-bind" }
fq-decorrelate = { path = "../fq-decorrelate" }
fq-connectors = { path = "../fq-connectors" }

[lints]
workspace = true
