[package]
name = "fq-physical"
version = "0.1.0"
edition.workspace = true

# fq-physical: optimized LogicalPlan -> PhysicalPlan (lowering, join
# algorithm/orientation), single-source pushdown, dim shipping, and step
# building (PhysicalPlan -> executable steps + fragments, CSE, reduction
# orientation). fq-physical composes fq-emit for all remote-query SQL
# rendering.

[dependencies]
fq-common = { path = "../fq-common" }
fq-plan = { path = "../fq-plan" }
fq-catalog = { path = "../fq-catalog" }
fq-optimize = { path = "../fq-optimize" }
fq-emit = { path = "../fq-emit" }
thiserror = "2"

[dev-dependencies]
fq-parse = { path = "../fq-parse" }
fq-bind = { path = "../fq-bind" }
fq-decorrelate = { path = "../fq-decorrelate" }
fq-connectors = { path = "../fq-connectors" }

[lints]
workspace = true
